--- a/gtk-2.0/buttons.rc
+++ b/gtk-2.0/buttons.rc
@@ -1,16 +1,56 @@
 style "button"
 {
-    bg[NORMAL]        = shade (1.1, @bg_color)
-    bg[PRELIGHT]      = shade (1.2, @bg_color)
-    bg[SELECTED]      = @selected_bg_color
-    bg[INSENSITIVE]   = @bg_color
-    bg[ACTIVE]        = shade (0.9, @bg_color)
-
     xthickness = 3
     ythickness = 3
 
-    engine "murrine" {
-        roundness = 2
+    engine "pixmap" 
+    {
+    image
+        {
+            function    = BOX
+            state       = NORMAL
+            file        = "assets/btn.png"
+            border      = { 4, 4, 4, 4 }
+            stretch     = TRUE
+        }
+    image
+        {
+            function    = BOX
+            recolorable = TRUE
+            shadow      = OUT
+            state       = PRELIGHT
+            file        = "assets/btn-hover.png"
+            border      = { 4, 4, 4, 4 }
+            stretch     = TRUE
+        }
+    image
+        {
+            function    = BOX
+            recolorable = TRUE
+            shadow      = IN
+            state       = PRELIGHT
+            file        = "assets/btn-active-hover.png"
+            border      = { 4, 4, 4, 4 }
+            stretch     = TRUE
+        }
+    image
+        {
+            function    = BOX
+            recolorable = TRUE
+            shadow      = IN
+            state       = ACTIVE
+            file        = "assets/btn-active.png"
+            border      = { 4, 4, 4, 4 }
+            stretch     = TRUE
+        }    
+    image 
+        {
+            function    = BOX
+            state       = INSENSITIVE
+            file        = "assets/btn-insensitive.png"
+            border      = { 1, 1, 1, 1 }
+            stretch     = TRUE
+        }
     }
 }
 
