Use murrine gtk2 buttons

--- a/gtk-2.0/check-radio.rc
+++ b/gtk-2.0/check-radio.rc
@@ -190,5 +190,5 @@ style "check-radio"
     }
 }
 
-widget_class "*<GtkRadioButton>*" style "check-radio"
-widget_class "*<GtkCheckButton>*" style "check-radio"
+widget_class "*<GtkRadioButton>*" style:highest "check-radio"
+widget_class "*<GtkCheckButton>*" style:highest "check-radio"
