--- a/gtk-2.0/buttons.rc
+++ b/gtk-2.0/buttons.rc
@@ -2,55 +2,19 @@ style "button"
 {
     xthickness = 3
     ythickness = 3
+    bg[NORMAL]	= shade (1.10, @bg_color)
+    bg[PRELIGHT]	= shade (1.14, @bg_color)
+    bg[ACTIVE]	= shade (0.92, @bg_color)
+    bg[SELECTED]	= shade (0.92, @bg_color)
+    bg[INSENSITIVE]	= shade (0.95, @bg_color)
 
-    engine "pixmap" 
-    {
-    image
-        {
-            function    = BOX
-            state       = NORMAL
-            file        = "assets/btn.png"
-            border      = { 3, 3, 3, 3 }
-            stretch     = TRUE
-        }
-    image
-        {
-            function    = BOX
-            recolorable = TRUE
-            shadow      = OUT
-            state       = PRELIGHT
-            file        = "assets/btn-hover.png"
-            border      = { 3, 3, 3, 3 }
-            stretch     = TRUE
-        }
-    image
-        {
-            function    = BOX
-            recolorable = TRUE
-            shadow      = IN
-            state       = PRELIGHT
-            file        = "assets/btn-active-hover.png"
-            border      = { 3, 3, 3, 3 }
-            stretch     = TRUE
-        }
-    image
-        {
-            function    = BOX
-            recolorable = TRUE
-            shadow      = IN
-            state       = ACTIVE
-            file        = "assets/btn-active.png"
-            border      = { 3, 3, 3, 3 }
-            stretch     = TRUE
-        }    
-    image 
-        {
-            function    = BOX
-            state       = INSENSITIVE
-            file        = "assets/btn-insensitive.png"
-            border      = { 1, 1, 1, 1 }
-            stretch     = TRUE
-        }
+    engine "murrine" {
+        contrast          = .8
+        lightborder_shade = 1.9
+        roundness         = 2
+        border_shades     = {0.8, 0.8}
+        shadow_shades     = {1.0, 0.5}
+        reliefstyle       = 4
     }
 }
 
@@ -63,6 +27,7 @@ style "treeview-header"
 
     engine "murrine" {
         listviewheaderstyle = 1
+        reliefstyle         = 0
     }
 }
 
