--- a/gnome-shell/src/meson.build
+++ b/gnome-shell/src/meson.build
@@ -69,18 +69,22 @@ endforeach
 
 # static files to copy
 data_sources = [
-  'activities.svg',
   'activities-active.svg',
+  'activities.svg',
   'calendar-today.svg',
+  'carousel-arrow-back-24-symbolic.svg',
+  'carousel-arrow-next-24-symbolic.svg',
   'checkbox-focused.svg',
   'checkbox-off-focused.svg',
   'checkbox-off.svg',
   'checkbox.svg',
+  'color-pick.svg',
   'd2p-activities-active.svg',
   'd2p-activities.svg',
   'dash-placeholder.svg',
   'eye-not-looking-symbolic.svg',
   'eye-open-negative-filled-symbolic.svg',
+  'gnome-shell-start.svg',
   'keyboard-caps-lock-filled-symbolic.svg',
   'keyboard-enter-symbolic.svg',
   'keyboard-hide-symbolic.svg',
@@ -101,6 +105,7 @@ data_sources = [
   'toggle-on-dark.svg',
   'toggle-on-hc.svg',
   'toggle-on.svg',
+  'window-close-24-symbolic.svg',
   'transparent.png'
 ]
 
